--- a/package.json
+++ b/package.json
@@ -19,11 +19,12 @@
     "node-sass": "^4.5.3",
     "sass-loader": "^6.0.6",
     "style-loader": "^0.18.2",
-    "webpack": "^4.8.3",
-    "webpack-cli": "^2.1.3",
+    "webpack": "^4.20.2",
+    "webpack-cli": "^3.1.1",
     "webpack-dev-server": "^3.1.4"
   },
   "dependencies": {
+    "giphy-api": "^2.0.1",
     "react": "^16.0.0",
     "react-dom": "^16.0.0"
   },
