--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   },
   "dependencies": {
     "giphy-api": "^2.0.1",
+    "google-map-react": "^1.1.1",
     "react": "^16.0.0",
     "react-dom": "^16.0.0"
   },
