--- a/package.json
+++ b/package.json
@@ -24,10 +24,9 @@
     "webpack-dev-server": "^3.1.4"
   },
   "dependencies": {
-    "giphy-api": "^2.0.1",
-    "google-map-react": "^1.1.1",
     "react": "^16.0.0",
-    "react-dom": "^16.0.0"
+    "react-dom": "^16.0.0",
+    "react-map-gl": "^4.0.2"
   },
   "scripts": {
     "start": "webpack-dev-server --mode development",
